--- a/terraform-expense/Jenkinsfile
+++ b/terraform-expense/Jenkinsfile
@@ -45,4 +45,11 @@ pipeline {
                 }
             }
         }
+
+    post { 
+        always { 
+            echo 'I will always say Hello again!'
+            deleteDir()
+            }
+        }
     }
