--- a/terraform-expense/Jenkinsfile
+++ b/terraform-expense/Jenkinsfile
@@ -30,6 +30,20 @@ pipeline {
                     params.action == "Apply"
                 }
             }
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+            }
+            steps {
+                sh 'ls -la'
+                }
+            }
+        stage('Apply') {
+            when{
+                expression{
+                    params.action == "Apply"
+                }
+            }
             steps {
                 sh 'echo Hello World, from Test'
                 }
