Added Jenkinsfile to terraform-expense

--- a/terraform-expense/Jenkinsfile
+++ b/terraform-expense/Jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
                 cd terraform-expense/01-vpc
                 echo "Listing contents of 01-vpc:"
                 ls -la
+                terraform init
             """
                 }
             }
