--- a/terraform-expense/Jenkinsfile
+++ b/terraform-expense/Jenkinsfile
@@ -15,11 +15,9 @@ pipeline {
             steps {
                 sh """
                 echo "Current Directory: \$(pwd)"
-                echo "Listing contents of the current directory:"
                 ls -la
                 echo "Changing directory to 01-vpc"
                 cd terraform-expense/01-vpc
-                echo "Listing contents of 01-vpc:"
                 ls -la
                 terraform init
             """
@@ -39,7 +37,6 @@ pipeline {
                 sh """
                 echo "Changing directory to 01-vpc"
                 cd terraform-expense/01-vpc
-                echo "Listing contents of 01-vpc:"
                 ls -la
                 terraform plan
             """
@@ -52,7 +49,7 @@ pipeline {
                 }
             }
             steps {
-                sh 'echo Hello World, from Test'
+                sh 'echo Hello World, from Apply'
                 }
             }
         stage('Deploy') {
